--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
     <div class="row">
         <div class="col-6">
 
-            <a class="btn btn-primary" href="publico.html">Pantalla publica</a>
-            <a class="btn btn-secondary" href="nuevo-ticket.html">Crear Tickets</a>
+            <a class="btn btn-primary" href="./publico.html">Pantalla publica</a>
+            <a class="btn btn-secondary" href="./nuevo-ticket.html">Crear Tickets</a>
 
         </div>
 
