--- a/public/desk.html
+++ b/public/desk.html
@@ -11,29 +11,30 @@
 </head>
 
 <body class="container">
-    <h1 class="mt-5">Escritorio</h1>
+    <h1 class="mt-5">Desk</h1>
     <hr>
     <div class="row">
         <div class="col-8">
-            <h4>Atendiendo a <small class="text-primary">....</small></h4>
+            <h4>Serving user <small class="text-primary">....</small></h4>
         
             <button class="btn btn-primary mt-5">
-                Atender siguiente ticket
+                Next serving
             </button>
         </div>
 
         <div class="col-4 text-center">
-            <h4>En cola</h4>
+            <h4>In queue</h4>
             
             <div class="alert alert-info mt-2">
-                <span>Ya no hay más tickets</span>
+                <span>No any more tickets</span>
             </div>
 
-            <h1 id="lblPendientes">10</h1>
+            <h1 id="lblPending">10</h1>
         </div>
     </div>
 
-    <script src="./js/escritorio.js"></script>
+    <script src="./socket.io/socket.io.js"></script>
+    <script src="./js/desk.js"></script>
 
 </body>
 
