--- a/public/index.html
+++ b/public/index.html
@@ -5,35 +5,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Programa de Colas</title>
+    <title>Queue Software</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 </head>
 
 <body class="container">
-    <h1 class="mt-5">Programa de Colas</h1>
+    <h1 class="mt-5">Queue Software</h1>
 
     <div class="row">
         <div class="col-6">
 
-            <a class="btn btn-primary" href="./publico.html">Pantalla publica</a>
-            <a class="btn btn-secondary" href="./nuevo-ticket.html">Crear Tickets</a>
+            <a class="btn btn-primary" href="public.html">Public Screen</a>
+            <a class="btn btn-secondary" href="new-ticket.html">New ticket</a>
 
         </div>
 
         <div class="col-6">
-            <form action="escritorio.html">
+            <form action="desk.html">
 
-                <input name="escritorio" 
+                <input name="desk" 
                        type="text" 
                        class="form-control" 
-                       placeholder="Escritorio" 
+                       placeholder="Desk" 
                        autofocus 
                        required>
 
                 <br>
                 <button type="submit" class="btn btn-primary">
-                    Ingresar
+                    Login
                 </button>
             </form>
         </div>
