--- a/public/new-ticket.html
+++ b/public/new-ticket.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Nuevo Ticket</title>
+    <title>New Ticket</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -16,7 +16,7 @@
     <table>
         <tr>
             <td>
-                <span id="lblNuevoTicket">
+                <span id="lblNewTicket">
                     Cargando...
                 </span>
             </td>
@@ -24,14 +24,14 @@
         <tr>
             <td>
                 <button class="btn btn-secondary btn-lg">
-                    Generar nuevo ticket
+                    Create new ticket
                 </button>
             </td>
         </tr>
     </table>
 
-
-    <script src="./js/nuevo-ticket.js"></script>
+    <script src="./socket.io/socket.io.js"></script>
+    <script src="./js/new-ticket.js"></script>
 
 </body>
 
